--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>Hello, World!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>LithiumOS</title>
+        <link rel="icon" href="https://github.com/ProjectLithium/.github/blob/main/assets/logo-inverted.png">
+    </head>
+    <body>
+        <h1>Penis</h1>
+    </body>
+</html>
