--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>LithiumOS</title>
-        <link rel="icon" href="https://github.com/ProjectLithium/.github/blob/main/assets/logo-inverted.png">
+        <link rel="icon" href="https://github.com/ProjectLithium/.github/blob/main/assets/logo-inverted.ico">
     </head>
     <body>
         <h1>Penis</h1>
